--- a/tasks/makovskiy_i_min_value_in_matrix_rows/settings.json
+++ b/tasks/makovskiy_i_min_value_in_matrix_rows/settings.json
@@ -1,7 +1,7 @@
 {
   "tasks_type": "threads",
   "tasks": {
-    "seq": "disabled",
-    "mpi": "disabled"
+    "seq": "enabled",
+    "mpi": "enabled"
   }
 }
