--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -26,6 +26,10 @@ jobs:
           git config --global --add safe.directory '*'
       - name: Run pre-commit checks
         run: |
-          FROM_REF="${{ github.base_ref || 'HEAD~1' }}"
-          git fetch origin $FROM_REF:$FROM_REF || true
-          pre-commit run --from-ref $FROM_REF --to-ref HEAD
+          FROM_REF="${{ github.base_ref }}"
+          if [ -n "$FROM_REF" ]; then
+            git fetch origin "$FROM_REF:$FROM_REF" || true
+          else
+            FROM_REF="HEAD~1"
+          fi
+          pre-commit run --from-ref "$FROM_REF" --to-ref HEAD
